feat: can see teacher comments, added decimal grade support, fixed grades displaying weirdly, bug fixes

--- a/app/todo.txt
+++ b/app/todo.txt
@@ -15,3 +15,5 @@ clean up comments and code remove redundant stuff (never happening)
 
 i'm prob not adding ios support, 99 dollas is EXPENSIVE
 
+- anal is sometimes broken
+
